examples/diagnostics/expected/1109-diagnostics-deref-non-pointer-reject.stderr
error: cannot dereference with `.*`: 'Point' is not a pointer
  --> examples/diagnostics/1109-diagnostics-deref-non-pointer-reject.sx:12:10
   |
12 |     q := p.*;          // ERROR: `p` is a Point value, not a pointer
   |          ^
